# rainroute-data-parse

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: quotas.yaml
scripts/: audit_hsp_scale.py  build_hsp_aws_calibration_range.py  build_hsp_aws_calibration_table.py  collect_hsp_aws_point_range.py  compare_hsp_points_to_aws_rn15.py  index_rain_events.py  install-pytorch.sh  merge_hsp_aws_calibration.py  smoke_collect_hsp.py  smoke_collect_hsr.py  smoke_collect_hsr_latlon.py  smoke_validate_hsp_latlon.py
src/rainroute_data/cli/: main.py
src/rainroute_data/clients/: kma.py  redaction.py
src/rainroute_data/collectors/: aws_minute.py  aws_stations.py  radar_hsp.py  radar_hsp_aws_points.py  radar_hsr.py  radar_latlon.py  raw_response.py
src/rainroute_data/datasets/: hsp_aws_calibration.py  rain_events.py
src/rainroute_data/parsers/: aws_minute.py  aws_stations.py  compression.py  radar_binary.py  radar_hsp.py  radar_hsp_aws_points.py  radar_latlon.py
tests/unit/: test_atomic.py  test_aws_collectors.py  test_aws_parsers.py  test_compression.py  test_import.py  test_kma_client.py  test_layout.py  test_manifest.py  test_precipitation_accumulation.py  test_radar_binary.py  test_radar_grid_validation.py  test_radar_hsp_aws_points.py  test_radar_hsp_aws_points_collector.py  test_radar_hsp_collector.py  test_radar_hsp_parser.py  test_radar_hsp_validation.py  test_radar_hsr_collector.py  test_radar_hsr_validation.py  test_radar_latlon.py  test_radar_latlon_collector.py  test_radar_station_match.py  test_raw_response_collector.py  test_redaction.py
(+8 files in other folders)
